@@ -6,7 +6,7 @@
 
 	<groupId>org.rudi</groupId>
 	<artifactId>rudi-parent</artifactId>
-	<version>3.1.2</version>
+	<version>3.1.3</version>
 	<packaging>pom</packaging>
 	<description>RUDI ${project.version}</description>
 
@@ -17,81 +17,88 @@
 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<jdk.cible>11</jdk.cible>
+		<jdk.cible>17</jdk.cible>
 		<java.version>${jdk.cible}</java.version>
 		<maven.compiler.source>${jdk.cible}</maven.compiler.source>
 		<maven.compiler.target>${jdk.cible}</maven.compiler.target>
 
-		<springframework.boot.version>2.7.13</springframework.boot.version>
-		<spring-cloud.version>2021.0.8</spring-cloud.version>
-		<spring-cloud-deps.version>2.1.7</spring-cloud-deps.version>
-		<spring-cloud-security.version>2.2.5.RELEASE</spring-cloud-security.version>
-		<spring-cloud-loadbalancer.version>2.2.9.RELEASE</spring-cloud-loadbalancer.version>
+		<springframework.boot.version>3.4.0</springframework.boot.version>
+		<spring-cloud.version>2024.0.0</spring-cloud.version>
+		<spring-cloud-deps.version>3.2.0</spring-cloud-deps.version>
+		<spring-cloud-starter.version>4.2.0</spring-cloud-starter.version>
 
 		<commons.io.version>2.18.0</commons.io.version>
 		<commons.collections4.version>4.4</commons.collections4.version>
 		<commons.lang3.version>3.17.0</commons.lang3.version>
-		<commons.text.version>1.12.0</commons.text.version>
+		<commons.text.version>1.13.0</commons.text.version>
 		<common.validator.version>1.9.0</common.validator.version>
 
-		<httpclient.version>4.5.2</httpclient.version>
+		<ehcache.version>3.10.8</ehcache.version>
+
+		<httpclient.version>5.4.1</httpclient.version>
+		<httpcore.version>5.3.2</httpcore.version>
 		<json.simple.version>1.1</json.simple.version>
 		<javax.validation.version>2.0.1.Final</javax.validation.version>
+		
 		<springfox.version>3.0.0</springfox.version>
 		<openapi.version>1.8.0</openapi.version>
+		<openapi-web.version>2.7.0</openapi-web.version>
 		<openapi.plugin.version>7.9.0</openapi.plugin.version>
+		<openapi-generator-version>7.9.0</openapi-generator-version>	
 		<openapi.jackson.version>0.2.6</openapi.jackson.version>
-		<jackson-datatype.version>2.15.2</jackson-datatype.version>
-		<jackson-core.version>2.18.1</jackson-core.version>
+		<jackson-core.version>2.18.2</jackson-core.version>
 		<apache.directory.api.version>2.1.7</apache.directory.api.version>
 		<google.maps.version>0.2.7</google.maps.version>
 		<jasig.cas.client.version>3.6.4</jasig.cas.client.version>
 		<mapstruct.version>1.6.3</mapstruct.version>
-		<lombok.version>1.18.20</lombok.version>
+		<lombok.version>1.18.26</lombok.version>
 		<swagger.codegen.version>3.0.21</swagger.codegen.version>
 		<swagger.version>2.2.26</swagger.version>
 		<flyway.version>9.19.4</flyway.version>
-		<freemarker.version>2.3.33</freemarker.version>
+		<freemarker.version>2.3.34</freemarker.version>
 		<jetbrains.annotations.version>26.0.1</jetbrains.annotations.version>
 		<mockwebserver.version>4.12.0</mockwebserver.version>
 		<nimbus.jose.jwt.version>9.47</nimbus.jose.jwt.version>
-		<freemarker.version>2.3.31</freemarker.version>
-		<jsoup.version>1.18.2</jsoup.version>
+		<freemarker.version>2.3.33</freemarker.version>
+		<jsoup.version>1.18.3</jsoup.version>
 		<activiti.version>7.1.0.M6</activiti.version>
-		<log4j.version>2.24.2</log4j.version>
-		<jaxb-api.version>2.3.1</jaxb-api.version>
-		<geotools.version>22.2</geotools.version>
+		<graalvm.version>23.0.6</graalvm.version>
+		<nashorn.version>15.6</nashorn.version>
+		<log4j.version>2.24.3</log4j.version>
+		<jaxb-impl.version>2.3.1</jaxb-impl.version>
+		<jaxb-api.version>4.0.2</jaxb-api.version>
+		<jaxb-runtime.version>4.0.5</jaxb-runtime.version>
+		<geotools.version>26.7</geotools.version>
 		<tika.version>3.0.0</tika.version>
 		<s3.version>2.6.0</s3.version>
-		<gson.version>2.8.9</gson.version>
-		<xdocreport.version>2.0.6</xdocreport.version>
-		<apache.poi.version>5.3.0</apache.poi.version>
+		<gson.version>2.11.0</gson.version>
+		<xdocreport.version>2.1.0</xdocreport.version>
+		<apache.poi.version>5.4.0</apache.poi.version>
 		<pdf.box.version>3.0.3</pdf.box.version>
 		<xmpbox.version>3.0.3</xmpbox.version>
 		<ghost4j.version>1.0.1</ghost4j.version>
 		<guice.version>5.0.1</guice.version>
-		<servlet.api.version>2.5</servlet.api.version>
+		<servlet.api.version>6.1.0</servlet.api.version>
+		<javax.javax.servlet.api.version>3.0.1</javax.javax.servlet.api.version>
 		<google-findbugs.version>3.0.2</google-findbugs.version>
 		<jsonassert.version>1.5.3</jsonassert.version>
 		<boucycastle.version>1.79</boucycastle.version>
 		<activation.version>1.1.1</activation.version>
-		<reactor-test.version>3.7.0</reactor-test.version>
+		<reactor-test.version>3.7.2</reactor-test.version>
 		<h2.version>2.3.232</h2.version>
 		<maven-replacer-plugin.version>1.4.1</maven-replacer-plugin.version>
 		<maven-resources-plugin.version>3.3.1</maven-resources-plugin.version>
 		<compiler.plugin.version>3.13.0</compiler.plugin.version>
 		<version-maven-plugin.version>2.18.0</version-maven-plugin.version>
-		<!-- avec surefire 2.12.4, le test du microservice provider n'est pas
-		lancé -->
 		<maven-surefire-plugin.version>3.5.2</maven-surefire-plugin.version>
 		<maven-assembly-plugin.version>3.7.1</maven-assembly-plugin.version>
-		<maven-javadoc-plugin.version>3.11.1</maven-javadoc-plugin.version>
+		<maven-javadoc-plugin.version>3.11.2</maven-javadoc-plugin.version>
 		<maven-jar-plugin.version>3.4.2</maven-jar-plugin.version>
 		<frontend-maven-plugin.version>1.15.1</frontend-maven-plugin.version>
 		<ant.plugin.version>3.1.0</ant.plugin.version>
 		<maven-scr-plugin.version>1.0.10</maven-scr-plugin.version>
 		<build-helper-maven-plugin.version>3.6.0</build-helper-maven-plugin.version>
-		<jaxb2-maven-plugin.version>2.4</jaxb2-maven-plugin.version>
+		<jaxb2-maven-plugin.version>3.2.0</jaxb2-maven-plugin.version>
 
 		<plantuml-generator-maven-plugin.version>3.0.1</plantuml-generator-maven-plugin.version>
 		<plantuml-maven-plugin.version>0.2.12</plantuml-maven-plugin.version>
@@ -139,6 +146,13 @@
 
 	<dependencyManagement>
 		<dependencies>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-properties-migrator</artifactId>
+				<version>${springframework.boot.version}</version>
+				<scope>runtime</scope>
+			</dependency>
 
 			<!-- Modules common -->
 			<dependency>
@@ -323,9 +337,15 @@
 
 			<!-- Modules tiers -->
 			<dependency>
-				<groupId>javax.servlet</groupId>
-				<artifactId>servlet-api</artifactId>
+				<groupId>jakarta.servlet</groupId>
+				<artifactId>jakarta.servlet-api</artifactId>
 				<version>${servlet.api.version}</version>
+			</dependency>
+			
+			<dependency>
+				<groupId>javax.servlet</groupId>
+				<artifactId>javax.servlet-api</artifactId>
+				<version>${javax.javax.servlet.api.version}</version>
 			</dependency>
 
 			<dependency>
@@ -358,15 +378,15 @@
 				<artifactId>
 					spring-cloud-starter-loadbalancer
 				</artifactId>
-				<version>${spring-cloud-loadbalancer.version}</version>
+				<version>${spring-cloud-starter.version}</version>
 			</dependency>
 
 			<dependency>
 				<groupId>org.springframework.cloud</groupId>
 				<artifactId>
-					spring-cloud-starter-security
+					spring-cloud-starter
 				</artifactId>
-				<version>${spring-cloud-security.version}</version>
+				<version>${spring-cloud-starter.version}</version>
 			</dependency>
 
 			<!-- Spring Boot -->
@@ -517,62 +537,55 @@
 
 			<!-- Swagger dependencies -->
 			<dependency>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-ui</artifactId>
+				<version>${openapi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-data-rest</artifactId>
+				<version>${openapi.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-boot-starter</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.springfox</groupId>
+				<artifactId>springfox-swagger-ui</artifactId>
+				<version>${springfox.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.springdoc</groupId>
+				<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+				<version>${openapi-web.version}</version>
+			</dependency>
+			<dependency>
+			    <groupId>org.springdoc</groupId>
+			    <artifactId>springdoc-openapi-starter-webflux-ui</artifactId>
+			    <version>${openapi-web.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.openapitools</groupId>
+				<artifactId>jackson-databind-nullable</artifactId>
+				<version>${openapi.jackson.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>io.swagger.core.v3</groupId>
+				<artifactId>swagger-models</artifactId>
+				<version>${swagger.version}</version>
+			</dependency>
+			<dependency>
 				<groupId>io.swagger.core.v3</groupId>
 				<artifactId>swagger-annotations</artifactId>
 				<version>${swagger.version}</version>
 			</dependency>
 
 			<dependency>
-				<groupId>io.swagger.core.v3</groupId>
-				<artifactId>swagger-models</artifactId>
-				<version>${swagger.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springdoc</groupId>
-				<artifactId>springdoc-openapi-ui</artifactId>
-				<version>${openapi.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.springdoc</groupId>
-				<artifactId>springdoc-openapi-data-rest</artifactId>
-				<version>${openapi.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger-ui</artifactId>
-				<version>${springfox.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>io.springfox</groupId>
-				<artifactId>springfox-swagger2</artifactId>
-				<version>${springfox.version}</version>
-				<exclusions>
-					<exclusion>
-						<groupId>io.github.classgraph</groupId>
-						<artifactId>classgraph</artifactId>
-					</exclusion>
-				</exclusions>
-			</dependency>
-			<dependency>
 				<groupId>com.fasterxml.jackson.core</groupId>
 				<artifactId>jackson-core</artifactId>
 				<version>${jackson-core.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>org.openapitools</groupId>
-				<artifactId>jackson-databind-nullable</artifactId>
-				<version>${openapi.jackson.version}</version>
-			</dependency>
-
-			<dependency>
-				<groupId>com.fasterxml.jackson.datatype</groupId>
-				<artifactId>ackson-datatype-jsr310</artifactId>
-				<version>${jackson-datatype.version}</version>
 			</dependency>
 
 			<!--
@@ -666,6 +679,32 @@
 				<artifactId>jsoup</artifactId>
 				<version>${jsoup.version}</version>
 			</dependency>
+			
+			<dependency>
+				<groupId>org.apache.httpcomponents.client5</groupId>
+				<artifactId>httpclient5</artifactId>
+				<version>${httpclient.version}</version>
+				<exclusions>
+					<exclusion>
+						<groupId>org.apache.httpcomponents.core5</groupId>
+	    				<artifactId>httpcore5</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>org.apache.httpcomponents.core5</groupId>
+						<artifactId>httpcore5-h2</artifactId>
+					</exclusion>
+				</exclusions>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents.core5</groupId>
+	    		<artifactId>httpcore5</artifactId>
+	    		<version>${httpcore.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.apache.httpcomponents.core5</groupId>
+	    		<artifactId>httpcore5-h2</artifactId>
+	    		<version>${httpcore.version}</version>
+			</dependency>
 
 			<!-- Activiti -->
 			<!--
@@ -687,17 +726,41 @@
 			</dependency>
 
 			<dependency>
-				<groupId>javax.xml.bind</groupId>
-				<artifactId>jaxb-api</artifactId>
-				<version>${jaxb-api.version}</version>
+				<groupId>
+					org.graalvm.js</groupId>
+				<artifactId>js</artifactId>
+				<version>${graalvm.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>
+					org.graalvm.js</groupId>
+				<artifactId>js-scriptengine</artifactId>
+				<version>${graalvm.version}</version>
+			</dependency>
+			<!--
+			https://mvnrepository.com/artifact/org.openjdk.nashorn/nashorn-core -->
+			<dependency>
+				<groupId>
+					org.openjdk.nashorn</groupId>
+				<artifactId>nashorn-core</artifactId>
+				<version>${nashorn.version}</version>
 			</dependency>
 
-
+			<dependency>
+				<groupId>jakarta.xml.bind</groupId>
+				<artifactId>jakarta.xml.bind-api</artifactId>
+				<version>${jaxb-api.version}</version>
+			</dependency>
+			<dependency>
+				<groupId>org.glassfish.jaxb</groupId>
+				<artifactId>jaxb-runtime</artifactId>
+				<version>${jaxb-runtime.version}</version>
+			</dependency>
 			<dependency>
 				<groupId>com.sun.xml.bind</groupId>
 				<artifactId>jaxb-impl</artifactId>
 				<scope>runtime</scope>
-				<version>${jaxb-api.version}</version>
+				<version>${jaxb-impl.version}</version>
 			</dependency>
 
 			<dependency>
@@ -856,6 +919,7 @@
 				<artifactId>gt-main</artifactId>
 				<version>${geotools.version}</version>
 			</dependency>
+			
 			<dependency>
 				<groupId>org.geotools</groupId>
 				<artifactId>gt-referencing</artifactId>
@@ -882,6 +946,23 @@
 				<version>${geotools.version}</version>
 			</dependency>
 
+			<dependency>
+				<groupId>org.ehcache</groupId>
+				<artifactId>ehcache</artifactId>
+				<classifier>jakarta</classifier>
+				<version>${ehcache.version}</version>
+			</dependency>
+
+			<dependency>
+				<groupId>javax.xml.bind</groupId>
+				<artifactId>jaxb-api</artifactId>
+				<version>2.3.1</version>
+			</dependency>
+
+			<dependency>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-starter-cache</artifactId>
+			</dependency>
 
 		</dependencies>
 	</dependencyManagement>
@@ -952,6 +1033,7 @@
 						<showDeprecation>true</showDeprecation>
 						<showWarnings>true</showWarnings>
 						<encoding>${project.build.sourceEncoding}</encoding>
+						<parameters>true</parameters>
 						<annotationProcessorPaths>
 							<path>
 								<groupId>org.projectlombok</groupId>
@@ -1019,7 +1101,8 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<version>${maven-surefire-plugin.version}</version>
 					<configuration>
-						<argLine>-Dfile.encoding=UTF-8</argLine>
+						<argLine>--add-opens java.base/java.util=ALL-UNNAMED
+							-Dfile.encoding=UTF-8</argLine>
 					</configuration>
 				</plugin>
 
@@ -1118,7 +1201,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<configuration>
-					<argLine>@{argLine}</argLine>
+					<argLine>@{argLine} --add-opens
+						java.base/java.util=ALL-UNNAMED</argLine>
 				</configuration>
 			</plugin>
 		</plugins>
@@ -1165,7 +1249,8 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
-							<argLine>@{argLine}</argLine>
+							<argLine>@{argLine} --add-opens
+								java.base/java.util=ALL-UNNAMED</argLine>
 							<includes>
 								<include>**/*UT.java</include>
 								<include>**/*Test.java</include>
@@ -1185,7 +1270,8 @@
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
-							<argLine>@{argLine}</argLine>
+							<argLine>@{argLine} --add-opens
+								java.base/java.util=ALL-UNNAMED</argLine>
 							<includes>
 								<include>**/*IT.java</include>
 								<include>**/*Test.java</include>
